# hydraxmpm_sf

./: .gitignore  agent.md  check1.py  pyproject.toml  pyrightconfig.json
examples/iacmag_2025/: mpm_collapse.py
hydraxmpm/: __init__.py
hydraxmpm/common/: base.py  types.py
hydraxmpm/constitutive_laws/: constitutive_law.py  druckerprager.py  modifiedcamclay.py  newtonfluid.py
hydraxmpm/forces/: boundary.py  force.py  gravity.py  outscope.py  rigidparticles.py  slipstickboundary.py
hydraxmpm/grid/: grid.py
hydraxmpm/material_points/: material_points.py
hydraxmpm/plotting/: helpers.py  viewer.py
hydraxmpm/shapefunctions/: cubic.py  linear.py  mapping.py  quadratic.py
hydraxmpm/solvers/: mpm_solver.py  usl.py  usl_apic.py
hydraxmpm/utils/: jax_helpers.py  math_helpers.py  mpm_callback_helpers.py  mpm_domain_helpers.py  plot.py  stl_helpers.py
iacmag_2025/: .polyscope.ini  mpm_collapse.py  mpm_postprcess_plot_all_models.py  mpm_postprocess_benchmark.py
